apps/staging/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.14.2938@sha256:5126f7ae94745a8e58e6963e1f67e905766c096832eff08b0678355ad0cdecee  # yamllint disable-line rule:line-length
          resources:
            requests:
              cpu: 150m
              memory: 170Mi
            limits:
              memory: 700Mi
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
              subPath: sonarr/config
            - name: sonarr-data
              mountPath: /media/shows
              subPath: shows
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
      securityContext:
        runAsUser: 995
        runAsGroup: 501
        fsGroup: 501
        fsGroupChangePolicy: "OnRootMismatch"
