apps/staging/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
